Search function expanded with year range
Search function now has a search from and to function (for example:
search "king" between 1700 and 2000)

--- a/Source/Chronozoom.UI/css/cz.css
+++ b/Source/Chronozoom.UI/css/cz.css
@@ -2251,6 +2251,11 @@ a.cz-form-preloadedrecord.time-series-link {
   display: block;
   width: 100%;
 }
+.cz-header-search-form .cz-form-search-date .cz-input {
+  width: auto;
+  display: inline-block;
+  float: right;
+}
 .cz-form-progress-bar {
   display: block;
   width: 100%;
